# atari-launcher

./: .gitignore  README.md  STATUS_CHECKPOINT.md  STATUS_FINAL.md  gradle.properties  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libretro_jni.cpp
app/src/main/kotlin/com/atari/launcher/: MainActivity.kt
app/src/main/kotlin/com/atari/launcher/data/: GameListViewModel.kt  RomItem.kt  RomScanner.kt
app/src/main/kotlin/com/atari/launcher/emulator/: EmulatorBridge.kt  EmulatorManager.kt
app/src/main/kotlin/com/atari/launcher/ui/components/: TouchOverlay.kt
app/src/main/kotlin/com/atari/launcher/ui/screens/: EmulatorScreen.kt  GameListScreen.kt
app/src/main/kotlin/com/atari/launcher/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: index.html
gradle/: libs.versions.toml
